--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -12,22 +12,31 @@ code {
   monospace;
 }
 
-.App {
+button {
+  font-weight: bold;
+  padding: 10px;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.app {
   text-align: center;
 }
 
-.App-logo {
+.app-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .app-logo {
+    animation: app-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
+.app-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -38,11 +47,11 @@ code {
   color: white;
 }
 
-.App-link {
+.app-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes app-logo-spin {
   from {
     transform: rotate(0deg);
   }
